# sync

./: .gitignore  README.md  pyproject.toml
syncify/: start.cmd
syncify/app/: .env  main.py  privacy_policy.html
syncify/app/api/: dependancies.py
syncify/app/api/api_v1/: api.py
syncify/app/api/api_v1/endpoints/: facebook.py  login.py  users.py  utils.py
syncify/app/core/: config.py  middlewares.py  security.py
syncify/app/crud/: base.py  crudUser.py
syncify/app/db/: base.py  session.py
syncify/app/intergrations/: facebook.py  google.py
syncify/app/models/: user.py
syncify/app/schemas/: user.py
syncify/app/scripts/: backend_prestart.py  system_logger.py
syncify/app/static/logs/: logs.txt
syncify/app/static/src/: home.html
syncify/app/static/styles/: styles.css
